examples/errors/bad_type.jj
func main
{
    let mut x { 1 };
    x = 1.0;
}